--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Pego NECTOR200 Temperature Controller",
   "version": "1.0.0",
   "documentation": "https://github.com/daggy72/nector200",
-  "requirements": ["requests>=2.28.0"],
+  "requirements": [],
   "dependencies": [],
   "codeowners": ["@daggy72"],
   "config_flow": true,
